# Nexus-Security

./: .dockerignore  .env  .env.blockchain  .env.example  .gitignore  BLOCKCHAIN_INTEGRATION_COMPLETE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCKER.md  DOCKER_SETUP.md  FRONTEND_IMPROVEMENTS.md  INTEGRATION_REPORT.md  ISSUES_FIXED.md  LICENSE  PHASE_3D_3E_COMPLETE.md  QUICKSTART.md  README.md  SECURITY.md  SETUP_COMPLETE.md  TESTING_DEVOPS.md  YOUR_ACTION_PLAN.md  codeviz-diagram-2025-08-20T15-16-30.drawio  docker-compose.dev.yml  docker-compose.yml  docker-start.sh  test-build.sh
backend/: .env  Cargo.toml  Dockerfile.template  check_output.txt  check_output_2.txt  check_output_3.txt  check_output_4.txt  docker-compose.yml
backend/.sqlx/: query-08cc4e6f05d6010accc919de047e7057ccfe367bc80c5028beed1f28ea3a03b4.json  query-606364c79e0990deb07dfbe6c32b3d302d083ec5333f3a5ce04113c38a041100.json  query-6305b731faee2df08c37daaa4fc50433beb725c4c7ff06e375e95883673e2715.json  query-843923b9a0257cf80f1dff554e7dc8fdfc05f489328e8376513124dfb42996e3.json  query-aed7f90fbb3fb4a4fe204aa59cae042c346cef70ecb5730ccc3be138efaae09e.json  query-c5c4fe7eaa1522d3ceed2752917388367229a009c653f359d8639832bd4ccb93.json  query-f3f58600e971f1be6cbe206bba24f77769f54c6230e28f5b3dc719b869d9cb3f.json
backend/analysis-engine/: ARCHITECTURE.md  Cargo.toml  Dockerfile
backend/analysis-engine/src/: config.rs  main.rs
backend/analysis-engine/src/analyzers/: clamav_analyzer.rs  dynamic_analyzer.rs  hash_analyzer.rs  heuristic_engine.rs  ml_analyzer.rs  mod.rs  network_analyzer.rs  signature_matcher.rs  static_analyzer.rs  static_analyzer_backup.rs  yara_engine.rs
backend/analysis-engine/src/models/: analysis_result.rs  mod.rs  scan_job.rs  threat_indicator.rs
backend/analysis-engine/src/queue/: consumer.rs  mod.rs  scheduler.rs  worker.rs
backend/analysis-engine/src/sandbox/: container.rs  mod.rs  monitor.rs  report_generator.rs
backend/analysis-engine/src/scanners/: archive_scanner.rs  email_scanner.rs  file_scanner.rs  mod.rs  url_scanner.rs
backend/analysis-engine/src/storage/: database.rs  mod.rs  s3_client.rs
backend/analysis-engine/src/utils/: file_handler.rs  mod.rs
backend/api-gateway/: .env  .sqlxrc  Cargo.toml  Dockerfile  config.rs
backend/api-gateway/abis/: Governance.json  ThreatToken.abi.json
backend/api-gateway/migrations/: 001_initial_schema.sql  001_user_engine.sql  002_extended_schema.sql  003_add_on_chain_id.sql  004_reputation_system.sql  bounty_system.sql  reputation_system.sql
backend/api-gateway/src/: config.rs  main.rs
backend/api-gateway/src/handlers/: analysis.rs  auth.rs  bounty.rs  health.rs  mod.rs  reputation.rs  submission.rs  user.rs  wallet.rs  webhook.rs
backend/api-gateway/src/middleware/: auth.rs  cors.rs  logging.rs  metrics.rs  mod.rs  rate_limiter.rs
backend/api-gateway/src/models/: analysis.rs  bounty.rs  error.rs  mod.rs  request.rs  response.rs  user.rs
backend/api-gateway/src/routes/: mod.rs  v1.rs  v2.rs
backend/api-gateway/src/services/: abi_loader.rs  auth_service.rs  blockchain.rs  cache_service.rs  database.rs  event_bus.rs  mod.rs  proxy_service.rs  redis.rs
backend/api-gateway/src/utils/: circuit_breaker.rs  crypto.rs  errors.rs  mod.rs  serialization.rs  validation.rs
backend/bounty-manager/: Cargo.toml  Dockerfile
backend/bounty-manager/migrations/: 001_initial.sql  20240101000000_initial_schema.sql
backend/bounty-manager/src/: config.rs  main.rs
backend/bounty-manager/src/handlers/: bounty_crud.rs  bounty_handler.rs  dispute.rs  mod.rs  payout.rs  reputation_handler.rs  submission.rs  submission_handler.rs  validation.rs
backend/bounty-manager/src/models/: bounty.rs  mod.rs  payout.rs  reputation.rs  submission.rs
backend/bounty-manager/src/services/: blockchain.rs  blockchain_sync.rs  consensus.rs  mod.rs  notification.rs  ranking.rs  reputation.rs  scoring.rs
backend/bounty-manager/src/workers/: consensus_worker.rs  mod.rs  payout_worker.rs  reputation_worker.rs  validation_worker.rs
backend/consensus-service/: Cargo.toml  Dockerfile
backend/consensus-service/migrations/: .gitkeep  20240101000000_initial_schema.sql
backend/consensus-service/src/: config.rs  main.rs
backend/consensus-service/src/aggregation/: mod.rs
backend/consensus-service/src/handlers/: admin.rs  consensus.rs  dispute.rs  health.rs  mod.rs  validation.rs
backend/consensus-service/src/models/: mod.rs
backend/consensus-service/src/services/: consensus_service.rs  mod.rs
backend/consensus-service/src/validators/: consensus_rules.rs  mod.rs  submission.rs
backend/consensus-service/src/workers/: consensus_processor.rs  dispute_resolver.rs  mod.rs
backend/notification-service/: Cargo.toml  Dockerfile
backend/notification-service/migrations/: 20240101000000_initial_schema.sql
backend/notification-service/src/: config.rs  main.rs  models.rs  notification_manager.rs
backend/notification-service/src/channels/: email.rs  mod.rs  push.rs  webhook.rs  websocket.rs
backend/notification-service/src/handlers/: health.rs  mod.rs  notification.rs  preferences.rs  webhook.rs  websocket.rs
backend/notification-service/src/templates/: mod.rs
backend/payment-service/: Cargo.toml  Dockerfile
backend/payment-service/migrations/: 20240101000000_initial_schema.sql  20240101000001_add_wallet_balances.sql
backend/payment-service/src/: config.rs  main.rs  models.rs
backend/payment-service/src/blockchain/: contracts.rs  mod.rs  provider.rs  transaction.rs
backend/payment-service/src/handlers/: admin.rs  health.rs  mod.rs  (+1 more)
backend/reputation-service/: Cargo.toml  Dockerfile
backend/reputation-service/migrations/: 20241127000001_create_reputation_tables.sql
backend/reputation-service/src/: config.rs  main.rs
backend/shared/: Cargo.toml
backend/shared/src/: lib.rs  types.rs
backend/submission-service/: Cargo.toml  Dockerfile
backend/submission-service/src/: main.rs
backend/user-service/: Cargo.toml  Dockerfile
backend/user-service/migrations/: .gitkeep
backend/user-service/src/: config.rs  main.rs
(+301 files in other folders)
