[workspace]
members = [
    "api-gateway",
    "analysis-engine",
    "bounty-manager",
    "notification-service",
    "user-service",
    "submission-service",
    "reputation-service",
    "consensus-service",
    "payment-service",
    "shared",
]
resolver = "2"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.5"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
redis = { version = "0.24", features = ["aio", "tokio-comp"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Blockchain integration
ethers = "2.0"

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Validation
validator = { version = "0.16", features = ["derive"] }

# Testing
tokio-test = "0.4"
mockall = "0.12"
pretty_assertions = "1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
