[package]
name = "analysis-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
sha2 = "0.10"
md5 = "0.7"
sha1 = "0.10"
reqwest = { version = "0.11", features = ["json"] }
yara = "0.18"  # For YARA engine
goblin = "0.6"  # For PE/ELF parsing
lazy_static = "1.4"
regex = "1"
mime = "0.3"  # For MIME parsing
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-native-tls"] }  # For DB
tower-http = { version = "0.4", features = ["cors", "trace"] }
rand = "0.8"  # For nonce generation
hex = "0.4"  # For hex conversions
tokio-test.workspace = true
blake2 = "0.10.6"
sha3 = "0.10.8"
ort = "1.16.3"
ndarray = "0.16.1"
