[package]
name = "analysis-engine"
version = "0.1.0"
edition = "2021"

[features]
default = []
# Enable native analysis engines (require system libraries)
yara-engine = ["dep:yara"]          # Requires libyara installed
clamav = ["dep:clamav-client"]      # Requires clamd running
ml-engine = ["dep:ort", "dep:ndarray"]  # Requires ONNX Runtime
# Convenience: enable all native engines
native-engines = ["yara-engine", "clamav", "ml-engine"]

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
sha2 = "0.10"
md-5 = "0.10"
sha1 = "0.10"
reqwest = { version = "0.11", features = ["json"] }
yara = { version = "0.18", optional = true }
clamav-client = { version = "0.3", optional = true }
goblin = "0.6"  # For PE/ELF parsing
lazy_static = "1.4"
regex = "1"
mime = "0.3"  # For MIME parsing
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid"] }
redis = { version = "0.24", features = ["aio", "tokio-comp"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
rand = "0.8"  # For nonce generation
hex = "0.4"  # For hex conversions
# S3/MinIO storage
aws-sdk-s3 = "1.0"
aws-config = "1.0"
tokio-test.workspace = true
blake2 = "0.10.6"
sha3 = "0.10.8"
ort = { version = "2.0.0-rc.10", optional = true }
ndarray = { version = "0.16.1", optional = true }
futures = "0.3"
tempfile = "3"
url = "2"
zip = "0.6"
async-trait = "0.1"
