[package]
name = "api-gateway"
version = "0.1.0"
edition = "2021"
authors = ["Nexus-Security Team"]
description = "API Gateway for Nexus-Security decentralized threat intelligence platform"
license = "MIT"
repository = "https://github.com/nexus-security/deep60"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros", "multipart"] }
tokio = { workspace = true }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-br", "compression-gzip", "limit"] }
hyper = "1.0"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Database
sqlx = { workspace = true }
redis = { workspace = true }

# Authentication & Security
jsonwebtoken = "9.2"
bcrypt = "0.15"
uuid = { workspace = true }

# Time handling
chrono = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Configuration
config = { workspace = true }
dotenvy = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Blockchain integration
ethers = { workspace = true }
web3 = "0.19"

# File handling
tempfile = "3.8"
mime = "0.3"
bytes = { workspace = true }

# Validation
validator = { workspace = true }

# Async utilities
futures = { workspace = true }
futures-util = "0.3"

# WebSocket support  
axum-extra = "0.9"

# Rate limiting
tower_governor = "0.4"

# Metrics and monitoring
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# Shared workspace dependencies
shared = { path = "../shared" }
regex = "1.11.1"
sha2 = "0.10.9"
sha1 = "0.10.6"
sha3 = "0.10.8"
ring = "0.17.14"
base64 = "0.22.1"
hex = "0.4.3"
url = "2.5.4"
md5 = "0.8.0"
urlencoding = "2.1"

[build-dependencies]
sqlx = { workspace = true }

[dev-dependencies]
# Testing
tokio-test = { workspace = true }
mockall = { workspace = true }

# Test utilities
serde_test = "1.0"
pretty_assertions = { workspace = true }

[features]
default = []
# Enable development features like detailed logging
dev = ["tracing-subscriber/fmt"]
# Enable production optimizations
prod = []

[[bin]]
name = "api-gateway"
path = "src/main.rs"

