[package]
name = "api-gateway"
version = "0.1.0"
edition = "2021"
authors = ["Nexus-Security Team"]
description = "API Gateway for Nexus-Security decentralized threat intelligence platform"
license = "MIT"
repository = "https://github.com/nexus-security/deep60"


[dependencies]
# Web framework
axum = { version = "0.7", features = ["multipart"] }
tower-http = { version = "0.5", features = ["cors", "trace", "limit"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }

# Redis
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Blockchain/Ethereum
ethers = { version = "2.0", features = ["ws", "rustls"] }

# Cryptography and hashing
sha2 = "0.10"
md5 = "0.7"
sha1 = "0.10"

# UUID support
uuid = { version = "1.0", features = ["serde", "v4"] }

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "multipart"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment variables
dotenv = "0.15"

# JWT tokens
jsonwebtoken = "9.0"

# Password hashing
argon2 = "0.5"

# Configuration
config = "0.14"

# File handling
tempfile = "3.0"
mime = "0.3"

# Rate limiting
governor = "0.6"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Additional utilities that might be needed based on your code
base64 = "0.21"
hex = "0.4"
bcrypt = "0.17.1"
regex = "1.11.2"
sha3 = "0.10.8"
ring = "0.17.14"
url = "2.5.7"
urlencoding = "2.1.3"

[dev-dependencies]
# Testing utilities
tokio-test = "0.4"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[[bin]]
name = "api-gateway"
path = "src/main.rs"
