[package]
name = "bounty-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
chrono.workspace = true
rust_decimal = "1.37.2"
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower = "0.5.2"
tower-http = "0.6.6"
tracing.workspace = true
uuid.workspace = true
