[package]
name = "consensus-service"
version = "0.1.0"
edition = "2021"
authors = ["Nexus-Security Team"]
description = "Consensus service for Nexus-Security - aggregates analysis results using weighted voting"
license = "MIT"
repository = "https://github.com/nexus-security/deep60"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "limit"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }

# Redis for caching
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Decimal arithmetic
rust_decimal = { version = "1.33", features = ["serde-with-str"] }

# UUID support
uuid = { version = "1.0", features = ["serde", "v4"] }

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# Async trait support
async-trait = "0.1"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Statistical calculations
statrs = "0.16"

# Shared module
shared = { path = "../shared" }

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "consensus-service"
path = "src/main.rs"
