[package]
name = "payment-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
axum = "0.7"
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
ethers = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
shared = { path = "../shared" }
