[package]
name = "reputation-service"
version = "0.1.0"
edition = "2021"
authors = ["Nexus-Security Team"]
description = "Reputation service for Nexus-Security - calculates and manages analyst reputation scores"
license = "MIT"
repository = "https://github.com/nexus-security/deep60"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "limit"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "decimal"] }

# Redis for caching
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Decimal arithmetic for precise calculations
rust_decimal = { version = "1.33", features = ["serde-with-str"] }

# UUID support
uuid = { version = "1.0", features = ["serde", "v4"] }

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
config = "0.14"
dotenv = "0.15"

# Async trait support
async-trait = "0.1"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Statistical calculations
statrs = "0.16"

# Background job scheduling
tokio-cron-scheduler = "0.10"

# Shared module
shared = { path = "../shared" }

[dev-dependencies]
tokio-test = "0.4"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[[bin]]
name = "reputation-service"
path = "src/main.rs"
